# Fapshi-rs

./: Cargo.toml  README.md  env.example
examples/: make_payment.rs
src/: client.rs  error.rs  lib.rs  models.rs
src/api/: balance.rs  mod.rs  payment.rs  transaction.rs  webhook.rs
