[package]
name = "fapshi-rs"
authors = ["Christian Yemele yemelechristian2@gmail.com"] 
version = "0.1.0"
edition = "2021"
description = "Rust SDK for Fapshi payment service"
license = "MIT"
readme = "README.md"
keywords = ["payment", "fapshi", "api", "sdk", "rust"]
categories = ["api-bindings", "web-programming"]
repository = "https://github.com/Christiantyemele/Fapshi-rs.git"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.5"

[dev-dependencies]


