[package]
name = "fapshi-rs"
authors = ["Christian Yemele yemelechristian2@gmail.com"]
version = "0.2.0"
edition = "2021"
description = "Rust SDK for Fapshi payment service"
license = "MIT"
readme = "README.md"
keywords = ["payment", "fapshi", "api", "sdk", "rust"]
categories = ["api-bindings", "web-programming"]
repository = "https://github.com/Christiantyemele/Fapshi-rs.git"

[features]
async = ["reqwest/rustls-tls", "reqwest/json"]

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
url = "2.5"

[dev-dependencies]
tokio = { version = "1.44", features = ["full"] }